# IP-Adapter

./: .gitignore  .pre-commit-config.yaml  README.md  infer_ip_adapter_generate.py  pyproject.toml  tutorial_train.py
.dvc/: config
configs/: train.yaml
configs/callbacks/: default.yaml
configs/data/: ip_adapter.yaml
configs/hydra/: default.yaml
configs/logger/: tensorboard.yaml
configs/model/: ip_adapter.yaml
configs/precision/: bf16.yaml  fp16.yaml  fp32.yaml
configs/train/: default.yaml
configs/trainer/: default.yaml
data/infer_examples/: requests.jsonl
data/processed/: .gitignore  coyo_original.dvc
ip_adapter/: attention_processor.py  custom_pipelines.py  ip_adapter.py  utils.py
tools/: check_broken_images.py  coyo_wds_to_original.py  data_access.py  jsonl_to_json_array.py
tools/production/: export_ip_adapter_bin.py  export_onnx_ip_adapter_unet.py  validate_onnx_ip_adapter_unet.py
